--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ GOOGLE_SECRET_ID="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"
 
 TWITTER_ID=
 TWITTER_SECRET=
+
+NEXTAUTH_SECRET=dhjsjsfcweskjfcnwfkmcwsecwesdwedwhdwefwfve
